--- a/PurchaseApp/appsettings.json
+++ b/PurchaseApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PurchaseAppConnection": "Server=localhost;Database=PurchaseAppDB;User Id=sa;Password=Ab103528;",
+    "TransactionPurchaseMessageConnection": "host=localhost:5672;username=guest;password=guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
