--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.4.3" />
     <PackageReference Include="FluentValidation" Version="10.3.4" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
     <PackageReference Include="MediatR" Version="11.1.0" />
@@ -14,12 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infra\Infra.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Handlers\AddApp\" />
-    <Folder Include="Handlers\ListApp\" />
-    <Folder Include="Validators\" />
   </ItemGroup>
 
 </Project>
